added constructor for creating a user from a user dto; added the @JsonIgnore annotation to method getTeamMembers()